--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start1": "npm run serve",
-    "start": "npm run build-ts && cross-env NODE_ENV=production node dist/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
     "test": "jest --forceExit --coverage --verbose",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
@@ -45,7 +45,8 @@
     "passport-facebook": "3.0.0",
     "passport-local": "1.0.0",
     "shelljs": "0.8.4",
-    "winston": "3.3.3"
+    "winston": "3.3.3",
+    "winston-daily-rotate-file": "^4.5.1"
   },
   "devDependencies": {
     "@types/async": "3.2.5",
@@ -84,6 +85,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "26.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "2.0.7",
     "prettier": "^2.2.1",
     "sass": "1.32.6",
