--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
+    "@types/morgan": "^1.9.2",
     "async": "3.2.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "3.7.2",
@@ -40,6 +41,7 @@
     "express-session": "1.17.1",
     "express-validator": "6.9.2",
     "lodash": "4.17.20",
+    "morgan": "^1.10.0",
     "nodemailer": "6.4.17",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
@@ -85,7 +87,6 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "26.6.3",
-    "morgan": "^1.10.0",
     "nodemon": "2.0.7",
     "prettier": "^2.2.1",
     "sass": "1.32.6",
