Added auth and home routes without middleware

--- a/package.json
+++ b/package.json
@@ -27,48 +27,65 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
-    "@types/morgan": "^1.9.2",
     "async": "3.2.0",
+    "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "3.7.2",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "1.17.1",
     "express-validator": "6.9.2",
+    "faker": "^5.4.0",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.20",
+    "lusca": "^1.7.0",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "nodemailer": "6.4.17",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
+    "randomstring": "^1.1.5",
     "shelljs": "0.8.4",
+    "validator": "^13.5.2",
     "winston": "3.3.3",
     "winston-daily-rotate-file": "^4.5.1"
   },
   "devDependencies": {
     "@types/async": "3.2.5",
+    "@types/bcrypt": "^3.0.0",
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/bluebird": "3.5.33",
     "@types/body-parser": "1.19.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/compression": "1.7.0",
+    "@types/cors": "^2.8.10",
     "@types/concurrently": "5.2.1",
     "@types/errorhandler": "1.5.0",
     "@types/eslint": "7.2.6",
-    "@types/express": "4.17.11",
+    "@types/express": "^4.17.11",
     "@types/express-flash": "0.0.2",
     "@types/express-session": "1.17.3",
     "@types/jest": "26.0.20",
     "@types/jquery": "3.5.5",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "4.14.168",
-    "@types/node": "14.14.25",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.25",
     "@types/nodemailer": "6.4.0",
     "@types/passport": "1.0.5",
     "@types/passport-facebook": "2.1.10",
+    "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "1.0.33",
     "@types/request": "2.48.5",
     "@types/request-promise": "4.1.47",
