Configured helment middleware for strict Content Security Policy headers

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
+    "@types/cookie-session": "^2.0.42",
+    "@types/serve-favicon": "^2.5.2",
     "async": "3.2.0",
     "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
@@ -34,6 +36,7 @@
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "8.2.0",
@@ -41,10 +44,11 @@
     "express": "4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
-    "express-session": "1.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "6.9.2",
     "faker": "^5.4.0",
     "helmet": "^4.4.1",
+    "helmet-csp": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.20",
     "lusca": "^1.7.0",
@@ -56,6 +60,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
     "randomstring": "^1.1.5",
+    "serve-favicon": "^2.5.0",
     "shelljs": "0.8.4",
     "validator": "^13.5.2",
     "winston": "3.3.3",
@@ -67,15 +72,15 @@
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/bluebird": "3.5.33",
     "@types/body-parser": "1.19.0",
-    "@types/cookie-parser": "^1.4.2",
     "@types/compression": "1.7.0",
-    "@types/cors": "^2.8.10",
     "@types/concurrently": "5.2.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/errorhandler": "1.5.0",
     "@types/eslint": "7.2.6",
     "@types/express": "^4.17.11",
     "@types/express-flash": "0.0.2",
-    "@types/express-session": "1.17.3",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "26.0.20",
     "@types/jquery": "3.5.5",
     "@types/jsonwebtoken": "^8.5.1",
