--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "debug": "npm run build && npm run watch-debug",
     "dev": "cross-env NODE_ENV=development nodemon",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "prisma:init": "prisma init",
+    "prisma:migrate": "prisma migrate dev --preview-feature",
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed --preview-feature",
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start1": "npm run serve",
@@ -26,8 +30,14 @@
     "watch-ts": "tsc -w",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
+  "prisma": {
+    "schema": "src/database/prisma/schema.prisma"
+  },
   "dependencies": {
+    "@prisma/client": "^2.20.0",
     "@types/cookie-session": "^2.0.42",
+    "@types/faker": "^5.1.7",
+    "@types/passport-github2": "^1.2.4",
     "@types/serve-favicon": "^2.5.2",
     "async": "3.2.0",
     "bcrypt": "^5.0.1",
@@ -39,16 +49,18 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "csurf": "^1.11.0",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
-    "express-validator": "6.9.2",
-    "faker": "^5.4.0",
+    "express-validator": "^6.9.2",
+    "faker": "^5.5.1",
     "helmet": "^4.4.1",
     "helmet-csp": "^3.3.1",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.20",
     "lusca": "^1.7.0",
@@ -57,6 +69,7 @@
     "nodemailer": "6.4.17",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
+    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
     "randomstring": "^1.1.5",
@@ -88,7 +101,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.25",
     "@types/nodemailer": "6.4.0",
-    "@types/passport": "1.0.5",
+    "@types/passport": "^1.0.5",
     "@types/passport-facebook": "2.1.10",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "1.0.33",
@@ -111,6 +124,8 @@
     "jest": "26.6.3",
     "nodemon": "2.0.7",
     "prettier": "^2.2.1",
+    "prettier-plugin-prisma": "^0.6.0",
+    "prisma": "^2.20.0",
     "sass": "1.32.6",
     "supertest": "6.1.3",
     "ts-jest": "26.5.0",
