--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@prisma/client": "^2.20.0",
     "@types/cookie-session": "^2.0.42",
     "@types/faker": "^5.1.7",
+    "@types/passport-github": "^1.1.5",
     "@types/passport-github2": "^1.2.4",
     "@types/serve-favicon": "^2.5.2",
     "async": "3.2.0",
@@ -51,6 +52,7 @@
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
     "dotenv": "8.2.0",
+    "ejs": "^3.1.6",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-ejs-layouts": "^2.5.0",
@@ -69,6 +71,7 @@
     "nodemailer": "6.4.17",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
+    "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
