--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "build-sass": "sass src/public/css/main.scss dist/public/css/main.css",
+    "build-tailwind": "npx tailwindcss-cli@latest build ./src/public/css/tailwind.css -o ./dist/public/css/tailwind.css",
     "build-ts": "tsc",
-    "build": "npm run build-sass && npm run build-ts && npm run lint && npm run copy-static-assets",
+    "build": "npm run build-tailwind && npm run build-ts && npm run lint && npm run copy-static-assets",
     "copy-static-assets": "ts-node script.ts",
     "debug": "npm run build && npm run watch-debug",
     "dev": "cross-env NODE_ENV=development nodemon",
@@ -21,7 +21,7 @@
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start1": "npm run serve",
-    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "start": "cross-env NODE_ENV=production && npm run build && node dist/server.js",
     "test": "jest --forceExit --coverage --verbose",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
@@ -115,6 +115,7 @@
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
+    "autoprefixer": "^10.2.5",
     "concurrently": "5.3.0",
     "eslint": "7.19.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -126,11 +127,13 @@
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "26.6.3",
     "nodemon": "2.0.7",
+    "postcss": "^8.2.10",
     "prettier": "^2.2.1",
     "prettier-plugin-prisma": "^0.6.0",
     "prisma": "^2.20.0",
     "sass": "1.32.6",
     "supertest": "6.1.3",
+    "tailwindcss": "^2.1.1",
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
