--- a/package.json
+++ b/package.json
@@ -54,6 +54,14 @@
     "dotenv": "8.2.0",
     "ejs": "^3.1.6",
     "errorhandler": "1.5.1",
+    "eslint": "7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-tsdoc": "^0.2.11",
     "express": "4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
@@ -75,9 +83,15 @@
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
+    "postcss": "^8.2.10",
+    "prettier": "^2.2.1",
+    "prisma": "^2.21.2",
     "randomstring": "^1.1.5",
+    "sass": "1.32.6",
     "serve-favicon": "^2.5.0",
     "shelljs": "0.8.4",
+    "tailwindcss": "^2.1.1",
+    "typescript": "4.1.3",
     "validator": "^13.5.2",
     "winston": "3.3.3",
     "winston-daily-rotate-file": "^4.5.1"
@@ -117,26 +131,12 @@
     "@typescript-eslint/parser": "4.14.2",
     "autoprefixer": "^10.2.5",
     "concurrently": "5.3.0",
-    "eslint": "7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "26.6.3",
     "nodemon": "2.0.7",
-    "postcss": "^8.2.10",
-    "prettier": "^2.2.1",
     "prettier-plugin-prisma": "^0.6.0",
-    "prisma": "^2.20.0",
-    "sass": "1.32.6",
     "supertest": "6.1.3",
-    "tailwindcss": "^2.1.1",
     "ts-jest": "26.5.0",
-    "ts-node": "9.1.1",
-    "typescript": "4.1.3"
+    "ts-node": "9.1.1"
   },
   "keywords": [],
   "author": "Jamie Samuel",
