--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build-tailwind && npm run build-ts && npm run lint && npm run copy-static-assets",
     "copy-static-assets": "ts-node script.ts",
     "debug": "npm run build && npm run watch-debug",
-    "dev": "cross-env NODE_ENV=development nodemon",
+    "dev2": "cross-env NODE_ENV=development nodemon",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prisma:init": "prisma init",
     "prisma:migrate": "prisma migrate dev --preview-feature",
@@ -21,7 +21,9 @@
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start1": "npm run serve",
-    "start": "cross-env NODE_ENV=production && npm run build && node dist/server.js",
+    "start": "node dist/server.js",
+    "postinstall": "cross-env NODE_ENV=production && npm run build",
+    "dev": "cross-env NODE_ENV=production && npm run build && node dist/server.js",
     "test": "jest --forceExit --coverage --verbose",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
