--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@prisma/client": "^2.20.0",
     "@types/cookie-session": "^2.0.42",
+    "@types/express-serve-static-core": "^4.17.19",
     "@types/faker": "^5.1.7",
     "@types/passport-github": "^1.1.5",
     "@types/passport-github2": "^1.2.4",
