--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dev2": "cross-env NODE_ENV=development nodemon",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prisma:init": "prisma init",
+    "prisma:pull": "prisma db pull",
     "prisma:migrate": "prisma migrate dev --preview-feature",
     "prisma:generate": "prisma generate",
-    "prisma:seed": "prisma db seed --preview-feature",
+    "prisma:seed": "prisma db seed",
+    "prisma:validate": "prisma validate",
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start1": "npm run serve",
@@ -33,113 +35,113 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "prisma": {
-    "schema": "src/database/prisma/schema.prisma"
+    "schema": "src/database/prisma/schema.prisma",
+    "seed": "ts-node ./src/database/database.seeder.ts"
   },
   "dependencies": {
-    "@prisma/client": "^2.20.0",
-    "@types/cookie-session": "^2.0.42",
-    "@types/express-serve-static-core": "^4.17.19",
-    "@types/faker": "^5.1.7",
-    "@types/passport-github": "^1.1.5",
-    "@types/passport-github2": "^1.2.4",
-    "@types/serve-favicon": "^2.5.2",
-    "async": "3.2.0",
+    "@faker-js/faker": "^7.1.0",
+    "@prisma/client": "^3.14.0",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express-serve-static-core": "^4.17.28",
+    "@types/jest": "^27.5.2",
+    "@types/passport-github": "^1.1.7",
+    "@types/passport-github2": "^1.2.5",
+    "@types/serve-favicon": "^2.5.3",
+    "async": "3.2.3",
     "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "3.7.2",
-    "body-parser": "1.19.0",
+    "body-parser": "1.20.0",
     "compression": "1.7.4",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
-    "dotenv": "8.2.0",
-    "ejs": "^3.1.6",
+    "dotenv": "16.0.1",
+    "ejs": "^3.1.8",
     "errorhandler": "1.5.1",
-    "eslint": "7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-tsdoc": "^0.2.11",
-    "express": "4.17.1",
-    "express-ejs-layouts": "^2.5.0",
+    "eslint": "8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-tsdoc": "^0.2.16",
+    "express": "4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.1",
-    "express-validator": "^6.9.2",
-    "faker": "^5.5.1",
-    "helmet": "^4.4.1",
-    "helmet-csp": "^3.3.1",
-    "joi": "^17.4.0",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.1",
+    "helmet": "^5.1.0",
+    "helmet-csp": "^3.4.0",
+    "jest": "^28.1.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.21",
     "lusca": "^1.7.0",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "morgan": "^1.10.0",
-    "nodemailer": "6.6.1",
-    "passport": "0.4.1",
+    "nodemailer": "6.7.5",
+    "passport": "0.6.0",
     "passport-facebook": "3.0.0",
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
-    "postcss": "^8.2.13",
-    "prettier": "^2.2.1",
-    "prisma": "^2.21.2",
-    "randomstring": "^1.1.5",
-    "sass": "1.32.6",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "prisma": "^3.14.0",
+    "randomstring": "^1.2.2",
+    "sass": "1.52.1",
     "serve-favicon": "^2.5.0",
     "shelljs": "0.8.5",
-    "tailwindcss": "^2.1.1",
-    "typescript": "4.1.3",
+    "tailwindcss": "^3.0.24",
+    "ts-jest": "^28.0.3",
     "validator": "^13.7.0",
-    "winston": "3.3.3",
-    "winston-daily-rotate-file": "^4.5.1"
+    "winston": "3.7.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@types/async": "3.2.5",
-    "@types/bcrypt": "^3.0.1",
+    "@types/async": "3.2.13",
+    "@types/bcrypt": "^5.0.0",
     "@types/bcrypt-nodejs": "0.0.31",
-    "@types/bluebird": "3.5.33",
-    "@types/body-parser": "1.19.0",
-    "@types/compression": "1.7.0",
-    "@types/concurrently": "5.2.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
+    "@types/bluebird": "3.5.36",
+    "@types/body-parser": "1.19.2",
+    "@types/compression": "1.7.2",
+    "@types/concurrently": "6.4.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/errorhandler": "1.5.0",
-    "@types/eslint": "7.2.6",
-    "@types/express": "^4.17.11",
+    "@types/eslint": "8.4.2",
+    "@types/express": "^4.17.13",
     "@types/express-flash": "0.0.2",
-    "@types/express-session": "^1.17.3",
-    "@types/jest": "26.0.20",
-    "@types/jquery": "3.5.5",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/lodash": "4.14.168",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.25",
-    "@types/nodemailer": "6.4.0",
-    "@types/passport": "^1.0.5",
-    "@types/passport-facebook": "2.1.10",
-    "@types/passport-jwt": "^3.0.5",
-    "@types/passport-local": "1.0.33",
-    "@types/request": "2.48.5",
-    "@types/request-promise": "4.1.47",
-    "@types/shelljs": "0.8.8",
-    "@types/supertest": "2.0.10",
+    "@types/express-session": "^1.17.4",
+    "@types/jquery": "3.5.14",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "4.14.182",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.38",
+    "@types/nodemailer": "6.4.4",
+    "@types/passport": "^1.0.8",
+    "@types/passport-facebook": "2.1.11",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "1.0.34",
+    "@types/request": "2.48.8",
+    "@types/request-promise": "4.1.48",
+    "@types/shelljs": "0.8.11",
+    "@types/supertest": "2.0.12",
     "@types/winston": "2.4.4",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
-    "autoprefixer": "^10.2.5",
-    "concurrently": "5.3.0",
-    "jest": "26.6.3",
-    "nodemon": "2.0.7",
-    "prettier-plugin-prisma": "^0.6.0",
-    "supertest": "6.1.3",
-    "ts-jest": "26.5.0",
-    "ts-node": "9.1.1"
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
+    "autoprefixer": "^10.4.7",
+    "concurrently": "7.2.1",
+    "nodemon": "2.0.16",
+    "prettier-plugin-prisma": "^3.14.0",
+    "supertest": "6.2.3",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2"
   },
   "keywords": [],
   "author": "Jamie Samuel",
